Set houses and apartments price range and a function was created to get URL to scrape.

--- a/House_Price.ipynb
+++ b/House_Price.ipynb
@@ -8,12 +8,29 @@
    "source": [
     "# 1) Importing libraries\n",
     "from selenium import webdriver # Web browser automation for web scraping and automated testing.\n",
-    "from selenium.webdriver.chrome.service import Service # Browser Service Control for Selenium.\n",
+    "from selenium.webdriver.firefox.service import Service # Browser Service Control for Selenium.\n",
     "from webdriver_manager.firefox import GeckoDriverManager # Automatic Firefox driver management for Selenium.\n",
+    "from selenium.webdriver.firefox.options import Options as FirefoxOptions\n",
+    "\n",
+    "from selenium.webdriver.firefox.options import Options as FirefoxOptions\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
     "\n",
     "from bs4 import BeautifulSoup # HTML document analysis  for web scraping.\n",
     "\n",
-    "import pandas as pd # Tabular data analysis and manipulation."
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2) Set houses and apartments price range\n",
+    "lower_price = 400000\n",
+    "upper_price = 2000000"
    ]
   },
   {
@@ -22,8 +39,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2) Web page URL from which the data will be extracted \n",
-    "url = 'https://www.encuentra24.com/guatemala-es/bienes-raices-venta-de-propiedades-casas/guatemala?q=f_price.400000-2000000|f_currency.GTQ|withcat.bienes-raices-venta-de-propiedades-casas,bienes-raices-venta-de-propiedades-apartamentos'"
+    "# 3) Web page URL from which the data will be extracted \n",
+    "def get_page_url(page_number,rango_i,rango_s):\n",
+    "    \n",
+    "    base_page_url = \"https://www.encuentra24.com/guatemala-es/bienes-raices-venta-de-propiedades-casas/guatemala-es-guatemala.{}?q=f_price.{}-{}|f_currency.GTQ|withcat.bienes-raices-venta-de-propiedades-casas,bienes-raices-venta-de-propiedades-apartamentos\".format(page_number,rango_i,rango_s)\n",
+    "    \n",
+    "    return base_page_url"
    ]
   },
   {
