Added a 'parser_and_save_items' function which uses Selenium to navigate to a specific page, capture HTML code, and then uses BeautifulSoup to parse it.

--- a/House_Price.ipynb
+++ b/House_Price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,23 +21,27 @@
     "\n",
     "import time\n",
     "\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2) Set houses and apartments price range\n",
-    "lower_price = 400000\n",
-    "upper_price = 2000000"
+    "import re\n",
+    "\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2) Set houses and apartments price range\n",
+    "lower_price = 400000\n",
+    "upper_price = 2000000\n",
+    "# Blank list where house and apartments ads will be stored.\n",
+    "house_apartment_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,10 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 4) Function that allows you to extract the basic information of each ad (title, price, square meters, \n",
+    "# number of rooms, parking spaces and bathrooms, location, image url and ad url\n",
     "def div_html_to_obj(house_div):\n",
     "    # We first try to find \"data-original\" attribute for the image, if it does not exist, we look for \"src\".\n",
     "    try:\n",
@@ -144,28 +150,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parser_and_save_items(page_number):\n",
+    "    # Navigate to specified page number and retrieve HTML source.\n",
+    "    driver.get(page_number)\n",
+    "    html_code = driver.page_source\n",
+    "    \n",
+    "    # Parse HTML using BeautifulSoup.\n",
+    "    soup = BeautifulSoup(html_code, 'html.parser')\n",
+    "    \n",
+    "    # Find all house and apartments advertisement div elements.\n",
+    "    all_house_div = soup.find_all(\"div\", class_=\"d3-ad-tile\")\n",
+    "    \n",
+    "    # Iterate over each house div, parse its content using div_html_to_obj, and append the result to house_apartment_list.\n",
+    "    for house_div in all_house_div:\n",
+    "        a = div_html_to_obj(house_div)\n",
+    "        house_apartment_list.append(a)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": []
