Extracts the ads total number and web page ads per page, calculates total pages number needed, rounding up to the nearest integer.

--- a/House_Price.ipynb
+++ b/House_Price.ipynb
@@ -176,14 +176,45 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 5) uses Selenium to navigate to a specific page, capture the HTML code, and then uses BeautifulSoup to parse it.\n",
+    "def web_page_number():\n",
+    "    # Extract ads total number and ads per page from HTML.\n",
+    "    # Position 1 shows total ads number, and position 5 shows ads number per page.    \n",
+    "    total_number_ads = int(soup.find(class_ = \"d3-category-list__results\").text.replace(\",\",\"\").split()[5])\n",
+    "    total_ads_page = int(soup.find(class_ = \"d3-category-list__results\").text.split()[3])\n",
+    "    \n",
+    "    # Calculate total pages number needed, rounding up to the nearest integer.\n",
+    "\n",
+    "    division = float(total_number_ads/total_ads_page)\n",
+    "    \n",
+    "    page_amount = math.ceil(division)\n",
+    "    \n",
+    "    return page_amount"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 6) Extracts total ads number and web page ads per page, calculates total pages number needed, \n",
+    "#    rounding up to the nearest integer.\n",
+    "def web_page_number():\n",
+    "    # Extract ads total number and ads per page from HTML.\n",
+    "    # Position 1 shows total ads number, and position 5 shows ads number per page.    \n",
+    "    total_number_ads = int(soup.find(class_ = \"d3-category-list__results\").text.replace(\",\",\"\").split()[5])\n",
+    "    total_ads_page = int(soup.find(class_ = \"d3-category-list__results\").text.split()[3])\n",
+    "    \n",
+    "    # Calculate total pages number needed, rounding up to the nearest integer.\n",
+    "\n",
+    "    division = float(total_number_ads/total_ads_page)\n",
+    "    \n",
+    "    page_amount = math.ceil(division)\n",
+    "    \n",
+    "    return page_amount"
+   ]
   },
   {
    "cell_type": "code",
