`div_html_to_obj` function created and added: - Added detailed comments to explain the purpose and functionality of each part of the `div_html_to_obj` function. - Enhanced readability and maintainability by describing the steps for extracting and processing property information from HTML. - Clarified the handling of image URLs, property details, and construction of the property URL.

--- a/House_Price.ipynb
+++ b/House_Price.ipynb
@@ -199,8 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6) Extracts total ads number and web page ads per page, calculates total pages number needed, \n",
-    "#    rounding up to the nearest integer.\n",
+    "# 6) Extracts total ads number and web page ads per page, calculates total pages number needed, rounding up to the nearest integer.\n",
     "def web_page_number():\n",
     "    # Extract ads total number and ads per page from HTML.\n",
     "    # Position 1 shows total ads number, and position 5 shows ads number per page.    \n",
@@ -218,10 +217,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7) Get basic information from each ad.\n",
+    "def div_html_to_obj(house_div):\n",
+    "    # Try to find URL image from 'data-original' attribute; if it doesn't exist, fallback to 'src'.\n",
+    "    try:\n",
+    "        img_url = house_div.find(\"img\")['data-original']\n",
+    "    except:\n",
+    "        img_url = house_div.find(\"img\")['src']  \n",
+    "\n",
+    "    # Extract location text from 'div' class: 'd3-ad-tile__location'.\n",
+    "    location = house_div.find(class_='d3-ad-tile__location').text.strip()\n",
+    "    # Extract title text from 'div' class: 'd3-ad-tile__title'.\n",
+    "    title = house_div.find(class_='d3-ad-tile__title').text\n",
+    "    \n",
+    "    # Extract raw price text from 'div' class: 'd3-ad-tile__price'.\n",
+    "    price_dirt = house_div.find(class_=\"d3-ad-tile__price\").text\n",
+    "\n",
+    "    # Define a regular expression to extract price value (in Q or $).\n",
+    "    price_regex = r'([Q$]\\d[\\d,.]+)'\n",
+    "\n",
+    "    # Find price using regular expression.\n",
+    "    original_price = re.findall(price_regex, price_dirt)\n",
+    "\n",
+    "    # Extract property details from 'div' class: 'd3-ad-tile__details'.\n",
+    "    attributes = house_div.find(class_='d3-ad-tile__details').find_all('li', class_='d3-ad-tile__details-item')\n",
+    "\n",
+    "    # Initialize variables for details property.\n",
+    "    square_meters = None\n",
+    "    rooms = None\n",
+    "    parking = None\n",
+    "    baths = None\n",
+    "\n",
+    "    # Iterate over attributes to extract specific property information.\n",
+    "    for attribute in attributes:\n",
+    "        icon = attribute.find('svg', class_='d3-icon d3-ad-tile__icon')\n",
+    "        value = attribute.text.strip()\n",
+    "\n",
+    "        if icon:\n",
+    "            # Get icon type from 'xlink:href' attribute.\n",
+    "            icon_use = icon.find('use').get('xlink:href')\n",
+    "            # Determine attribute type and extract numeric value.\n",
+    "            if 'resize' in icon_use:  # Square meters.\n",
+    "                square_meters = int(re.search(r'\\d+', value).group())\n",
+    "            elif 'bed' in icon_use:  # Rooms number.\n",
+    "                rooms = int(value)\n",
+    "            elif 'parking' in icon_use:  # Parking number.\n",
+    "                parking = int(value)\n",
+    "            elif 'bath' in icon_use:  # Baths number.\n",
+    "                baths = int(value)\n",
+    "\n",
+    "    # Create property URL listing.\n",
+    "    url = 'https://www.encuentra24.com' + house_div.find(\"a\")[\"href\"]\n",
+    "\n",
+    "    # Return extracted information as a dictionary.\n",
+    "    return {\n",
+    "        \"title\": title,\n",
+    "        \"price\": original_price,\n",
+    "        \"square_meters\": square_meters,\n",
+    "        \"rooms\": rooms,\n",
+    "        \"parking\": parking,\n",
+    "        \"baths\": baths,\n",
+    "        \"location\": location,\n",
+    "        \"img_url\": img_url,\n",
+    "        \"url\": url\n",
+    "    }"
+   ]
   },
   {
    "cell_type": "code",
