Implement `parser_and_save_items` function to scrape and process property listings
- Added `parser_and_save_items` function to navigate to a specified page, retrieve HTML content, and parse it using BeautifulSoup.
- Extracted property listings from HTML by searching for div elements with class 'd3-ad-tile'.
- Converted each property listing to a dictionary using `div_html_to_obj` and appended it to `house_apartment_list`.
- This function facilitates the automated collection of property data for further analysis.

--- a/House_Price.ipynb
+++ b/House_Price.ipynb
@@ -217,20 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 7) Get basic information from each ad.\n",
     "def div_html_to_obj(house_div):\n",
@@ -300,10 +289,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 8) Scrape and process property listings from a web page.\n",
+    "def parser_and_save_items(page_number):\n",
+    "    # Navigate to specified page number using web driver.\n",
+    "    driver.get(page_number)\n",
+    "    # Get HTML current page code.\n",
+    "    html_code = driver.page_source\n",
+    "    # Parse HTML code with BeautifulSoup to create a soup object.\n",
+    "    soup = BeautifulSoup(html_code, 'html.parser')\n",
+    "    # Find all 'div' elements class: 'd3-ad-tile' which represent individual property listings.\n",
+    "    all_house_div = soup.find_all(\"div\", class_=\"d3-ad-tile\")\n",
+    "    \n",
+    "    # Iterate over each div element found\n",
+    "    for house_div in all_house_div:\n",
+    "        # Convert HTML div element to a dictionary object using 'div_html_to_obj' function.\n",
+    "        a = div_html_to_obj(house_div)\n",
+    "        # Append dictionary object to house_apartment_list.\n",
+    "        house_apartment_list.append(a)"
+   ]
   },
   {
    "cell_type": "code",
