Implement pagination and scraping for all pages
- Iterates through each page number from 1 to the total number of pages.
- Generates the URL for each page based on the specified price range.
- Scrapes and processes property listings from each generated URL.

--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -317,14 +317,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 9) Iterate through each page number from 1 to pages total number.\n",
+    "for actual_page in range(1, web_page_number() + 1):\n",
+    "    # Generate the URL for the current page with the specified price range.\n",
+    "    a = get_page_url(actual_page, lower_price, upper_price)\n",
+    "\n",
+    "    # Scrape and process the property listings from the generated URL.\n",
+    "    parser_and_save_items(a)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 10) Create DataFrame with basic ad information.\n",
+    "df = pd.DataFrame(house_apartment_list)"
+   ]
   },
   {
    "cell_type": "code",
