--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -36,7 +36,9 @@
     "lower_price = 400000\n",
     "upper_price = 2000000\n",
     "# Blank list where house and apartments ads will be stored.\n",
-    "house_apartment_list = []"
+    "house_apartment_list = []\n",
+    "# Blank list where houses and apartments ads description will be stored.\n",
+    "list_description = []"
    ]
   },
   {
@@ -342,7 +344,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 11) Scrape property descriptions function.\n",
+    "def obtain_description(url_anuncio):\n",
+    "    try:\n",
+    "        # Set up HTTP headers to mimic a real web browser request.\n",
+    "        headers = {\n",
+    "            'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
+    "        }\n",
+    "        # Send an HTTP GET request to the specified URL with the headers.\n",
+    "        response = requests.get(url_anuncio, headers=headers)\n",
+    "        # Ensure that request was successful; raise an error for unsuccessful status codes.\n",
+    "        response.raise_for_status()  \n",
+    "\n",
+    "        # Parse page HTML content using BeautifulSoup.\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "        \n",
+    "        # Find HTML element containing property description.\n",
+    "        descripcion_element = soup.find('div', class_='d3-property-about__text')\n",
+    "        \n",
+    "        if descripcion_element:\n",
+    "            # Extract and clean up the text of the description.\n",
+    "            descripcion = descripcion_element.text.strip().replace(\"\\n\", \" \")\n",
+    "            return descripcion\n",
+    "        else:\n",
+    "            # Print a message if the description is not found.\n",
+    "            print(f\"Description not found in {url_anuncio}\")\n",
+    "            return None\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        # Print an error message if an exception occurs during the request or parsing.\n",
+    "        print(f\"Error getting description of {url_anuncio}: {e}\")\n",
+    "        return None"
+   ]
   },
   {
    "cell_type": "code",
