Extract descriptions from property listings
- Retrieved ads URLs that have a defined URL from 'house_apartment_list'.
- Iterated over each URL to obtain property descriptions.
- Added obtained descriptions to 'list_description'.

--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -383,7 +383,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 12) Obtain ads URLs that have a defined URL.\n",
+    "\n",
+    "# Create a list of URLs from the `house_apartment_list` where the 'url' field is defined.\n",
+    "urls_anuncios = [anuncio[\"url\"] for anuncio in house_apartment_list if anuncio[\"url\"]]\n",
+    "\n",
+    "# Iterate over each URL in the list of URLs.\n",
+    "for i in urls_anuncios:\n",
+    "    # Obtain description for each URL ad.\n",
+    "    descripcion = obtain_description(i)\n",
+    "    # Append the obtained description to the 'list_description'\n",
+    "    list_description.append(descripcion)"
+   ]
   },
   {
    "cell_type": "code",
