Save DataFrame to Excel file with Raw Data
- Exported the DataFrame `df` to an Excel file named '8_1_2024.xlsx' for raw data storage.

--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -402,7 +402,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 13) Save DataFrame to an Excel file with Raw Data\n",
+    "# Export DataFrame `df` to an Excel file named 'date.xlsx' \n",
+    "df.to_excel('8_1_2024.xlsx')"
+   ]
   },
   {
    "cell_type": "code",
