Replaced NaN values with 0 and converted numeric columns to integers for square_meters, rooms, parking, and baths.

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,22 +11,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Upload CSV file containing scraped raw data (web_scraping.ipynb)\n",
+    "# 1) Upload CSV file containing scraped raw data (web_scraping.ipynb)\n",
     "df = pd.read_csv(r'C:\\Users\\DAV\\Documents\\Python\\Python_Project\\House_price_project\\data\\raw\\8_1_2024.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete first column (unnamed) using its index.\n",
+    "# 2) Delete first column (unnamed) using its index.\n",
     "df.drop(df.columns[0], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3) Replace NaN with 0. \n",
+    "df['square_meters'] = df['square_meters'].fillna(0)\n",
+    "df['rooms'] = df['rooms'].fillna(0)\n",
+    "df['parking'] = df['parking'].fillna(0)\n",
+    "df['baths'] = df['baths'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4) Convert columns to integers.\n",
+    "df['square_meters'] = df['square_meters'].astype(int)\n",
+    "df['rooms'] = df['rooms'].astype(int)\n",
+    "df['parking'] = df['parking'].astype(int)\n",
+    "df['baths'] = df['baths'].astype(int)"
    ]
   },
   {
@@ -34,14 +60,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
