Delete those records that have similarity in: title, square_meters, rooms, parking and baths.

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,39 @@
     "df['rooms'] = df['rooms'].astype(int)\n",
     "df['parking'] = df['parking'].astype(int)\n",
     "df['baths'] = df['baths'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "33 duplicate rows were removed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5) Delete those records that have similarity in: title, square_meters, rooms, parking and baths.\n",
+    "\n",
+    "#  Count rows number before removing duplicates.\n",
+    "initial_count = df.shape[0]\n",
+    "\n",
+    "# Remove duplicates considering specified columns.\n",
+    "df.drop_duplicates(subset=['title', 'square_meters', 'rooms', 'parking', 'baths'], inplace=True)\n",
+    "\n",
+    "# Count rows number after removing duplicates.\n",
+    "final_count = df.shape[0]\n",
+    "\n",
+    "# Calculate how many rows were deleted.\n",
+    "removed_count = initial_count - final_count\n",
+    "\n",
+    "# Message about how many rows were deleted.\n",
+    "print(f\"\\n{removed_count} duplicate rows were removed.\")"
    ]
   },
   {
