Convert price to integer and apply a conversion rate

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -94,6 +94,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 6) Convert price to integer, removing symbols (\"[ ]\",\",\"$\",\"Q\") and applying a conversion rate.\n",
+    "\n",
+    "# Define conversion rate ($ to Q).\n",
+    "conversion_rate = 7.8\n",
+    "\n",
+    "def convert_price(price):\n",
+    "    # Remove extra spaces and brackets, and take first value in the list.\n",
+    "    price = price.strip(\"[]'\")  # Remove brackets and quotes.\n",
+    "\n",
+    "    # Check if price is in quetzales or dollars.\n",
+    "    if 'Q' in price:\n",
+    "        return int(price.replace('Q', '').replace(',', ''))  # Convert to integer.\n",
+    "    elif '$' in price:\n",
+    "        # Convert price from dollars to quetzales adjustable based on current exchange rate).\n",
+    "        usd_value = int(price.replace('$', '').replace(',', ''))  # Convert to integer.\n",
+    "        return int(usd_value * conversion_rate)  \n",
+    "    else:\n",
+    "        return None  # Or handle another way if it is not in the expected format\n",
+    "\n",
+    "# Apply function and create a new column 'price_in_quetzales'\n",
+    "df['price_in_quetzales'] = df['price'].apply(convert_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df.head()"
    ]
   },
